--- a/app/src/main/res/layout/big_item.xml
+++ b/app/src/main/res/layout/big_item.xml
@@ -22,8 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20sp"
-            android:background="@color/grey"
-            tools:listitem="@layout/small_item"
+
+            tools:listitem="@layout/small_item_input"
 
 
 
